# SaveCloudPotato

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Architecture.md  DATA_Model.md  DATA_Model_v0.1.md  DATA_Model_v0.2.md  DATA_Model_v0.3.md  DECISIONS.md  Filesystem_Layout.md  Project_Principles.md  Project_Scope.md  RoadMap.md  Workflow.md
savecloud/: cli.py  cli.py2  constants.py  library.py
savecloud/adapters/: __init__.py  base.py  eden.py  manual.py
savecloud/commands/: download.py  export_save.py  history.py  import_save.py  info.py  init.py  list.py  play.py  register.py  restore.py  snapshot.py  sync.py  unregister.py  upload.py
savecloud/config/: constants.py
savecloud/fart/adapters/: eden.py
savecloud/fart/commands/: export_save.py  restore.py  unregister.py
savecloud/fart/models/: game.py
savecloud/fart/services/: device.py  library.py
savecloud/launchers/: __init__.py  appimage.py  base.py  native.py  registry.py
savecloud/models/: constants.py  device_profile.py  game.py  library_metadata.py
savecloud/services/: autosync.py  device.py  launch.py  library.py  registry.py  save.py  sync.py
savecloud/storage/: __init__.py  local.py  registry.py
tests/: test_autosync.py  test_backend.py  test_cli_play.py  test_cli_sync.py  test_export.py  test_game_runtime.py  test_import.py  test_launch.py  test_library_metadata.py  test_list_versions.py  test_local_storage.py  test_registry.py  test_restore.py  test_save_service.py  test_storage.py  test_sync.py  test_version_exists.py  test_versioning.py
